--- a/app/src/main/res/layout/fragment_dest_certificate.xml
+++ b/app/src/main/res/layout/fragment_dest_certificate.xml
@@ -16,20 +16,19 @@
         android:backgroundTint="@color/blue_900"
         android:text="Download"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="0dp"
+        android:layout_width="411dp"
         android:layout_height="332dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="110dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498"
         app:srcCompat="@drawable/congratulations_your_carbon_footprint_is_lower_than_average_carbon_footprint" />
 
     <TextView
@@ -48,11 +47,12 @@
         android:id="@+id/BtnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="@color/blue_900"
-        android:text="Back to Home Carbong Footprint"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Back to Home Carbon Footprint"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BtnDownload" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
