Layout feedback and profile modified

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -34,23 +34,21 @@
                 android:id="@+id/profileView"
                 android:layout_width="136dp"
                 android:layout_height="136dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="54dp"
                 android:src="@drawable/default_profile_img"
                 app:civ_border_color="@color/white"
                 app:civ_border_width="2dp"
-                app:layout_constraintBottom_toBottomOf="@id/ProfileEnhancedTV"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.455" />
+                app:layout_constraintEnd_toStartOf="@+id/BtnEditProfile"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/IVEnhancedSurvey"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="52dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="24dp"
                 android:background="@drawable/white_background"
                 android:orientation="vertical"
@@ -209,7 +207,7 @@
                 android:id="@+id/BtnEditProfile"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="32dp"
                 android:background="@color/azureish_white"
                 android:contentDescription="Edit Profile icon"
                 android:scaleType="fitCenter"
@@ -225,7 +223,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="32dp"
                 android:src="@drawable/ic_baseline_survey_24"
                 app:layout_constraintEnd_toStartOf="@+id/BtnEditProfile"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -237,25 +235,23 @@
                 android:id="@+id/scoreProgressBar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="286dp"
-                android:layout_height="32dp"
-                android:layout_marginBottom="396dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="8dp"
                 android:max="8"
                 android:progress="0"
                 android:progressDrawable="@drawable/custom_progress_drawable"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.256"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ProfileEnhancedTV"
-                app:layout_constraintVertical_bias="0.343" />
+                app:layout_constraintTop_toBottomOf="@+id/ProfileEnhancedTV" />
 
             <TextView
                 android:id="@+id/ProfileEnhancedTV"
                 android:layout_width="326dp"
-                android:layout_height="32dp"
-                android:layout_marginTop="256dp"
+                android:layout_height="28dp"
+                android:layout_marginTop="228dp"
                 android:text="Environmental Awareness"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.376"
@@ -264,12 +260,12 @@
 
             <TextView
                 android:id="@+id/enhancedSurveyPercentage"
-                android:layout_width="39dp"
-                android:layout_height="32dp"
+                android:layout_width="52dp"
+                android:layout_height="28dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="52dp"
-                android:text="TextView"
-                android:textSize="20dp"
+                android:text=""
+                android:textSize="16dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                 app:layout_constraintEnd_toEndOf="parent"
