--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -15,7 +15,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingBottom="48dp">
 
             <!--        <ImageButton-->
             <!--            android:id="@+id/imageButton3"-->
@@ -49,7 +50,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="44dp"
+                android:layout_marginTop="32dp"
                 android:text="How was your experience?"
                 android:textSize="20dp"
                 android:textStyle="bold"
@@ -89,7 +90,7 @@
             <Button
                 android:id="@+id/BtnSubmitFeedback"
                 android:layout_width="95dp"
-                android:layout_height="40dp"
+                android:layout_height="48dp"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/button"
                 android:text="Submit"
