--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
                 android:layout_marginTop="68dp"
-                android:text="Hello"
+                android:text="Hello,"
                 android:textColor="#ffffff"
                 android:textSize="23sp"
                 android:textStyle="bold"
@@ -74,7 +74,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="104dp"
+                android:layout_marginStart="108dp"
                 android:layout_marginTop="36dp"
                 android:text="username"
                 android:textColor="#ffffff"
