--- a/app/src/main/res/layout/fragment_organizations.xml
+++ b/app/src/main/res/layout/fragment_organizations.xml
@@ -281,12 +281,14 @@
 
                     <TextView
                         android:id="@+id/textViewMoreOrganizations"
-                        android:layout_width="wrap_content"
-                        android:layout_height="23dp"
-                        android:layout_marginStart="130dp"
-                        android:layout_marginTop="30dp"
-                        android:layout_marginBottom="24dp"
-                        android:background="@color/azureish_white"
+                        android:layout_width="240dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="110dp"
+                        android:layout_marginTop="36dp"
+                        android:layout_marginBottom="40dp"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:background="@drawable/rounded_rect_more_organizations"
                         android:clickable="true"
                         android:minHeight="48dp"
                         android:onClick="openGoogleOrganizationsList"
