--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -42,11 +42,11 @@
         android:id="@+id/CNABtn"
         android:layout_width="120dp"
         android:layout_height="57dp"
-        android:layout_marginBottom="65dp"
+        android:layout_marginBottom="80dp"
         android:background="#03A9F4"
         android:foregroundTint="#03A9F4"
         android:text="Sign Up"
-        android:textColor="#5E35B1"
+        android:textColor="#321BB5"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,16 +55,18 @@
 
     <EditText
         android:id="@+id/LoginEmail"
-        android:layout_width="246dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="82dp"
+        android:layout_width="280dp"
+        android:layout_height="48dp"
         android:layout_marginTop="67dp"
-        android:layout_marginEnd="83dp"
+        android:background="@drawable/rect_login"
         android:ems="10"
-        android:hint="Email Address or Phone Number"
+        android:hint="Email Address"
         android:inputType="text"
+        android:padding="10dp"
+        android:paddingStart="50dp"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ecohelpertext" />
 
@@ -79,50 +81,49 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/dots2" />
 
-    <Button
-        android:id="@+id/fgtBtn"
-        android:layout_width="180dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="148dp"
+    <TextView
+        android:id="@+id/TVForgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
+        android:padding="8dp"
         android:text="Forgot password?"
         android:textAllCaps="false"
-        android:textColor="#DA1D1D"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/BtnLogin" />
+        android:textColor="#696868"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/LoginPass"
+        app:layout_constraintTop_toBottomOf="@+id/LoginPass" />
 
     <Button
         android:id="@+id/BtnLogin"
         android:layout_width="115dp"
         android:layout_height="57dp"
         android:layout_marginStart="148dp"
-        android:layout_marginTop="46dp"
         android:layout_marginEnd="148dp"
+        android:layout_marginTop="32dp"
         android:background="#03A9F4"
         android:text="Log in"
-        android:textColor="#5E35B1"
+        android:textColor="#321BB5"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LoginPass" />
+        app:layout_constraintTop_toBottomOf="@+id/TVForgotPassword" />
 
     <EditText
         android:id="@+id/LoginPass"
-        android:layout_width="245dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="82dp"
+        android:layout_width="280dp"
+        android:layout_height="48dp"
         android:layout_marginTop="19dp"
-        android:layout_marginEnd="84dp"
+        android:background="@drawable/rect_login"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:padding="10dp"
+        android:paddingStart="50dp"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LoginEmail" />
 
@@ -130,13 +131,13 @@
         android:id="@+id/toggleButton"
         android:layout_width="30dp"
         android:layout_height="26dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="88dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
         android:background="@drawable/toggle_button_background"
         android:textOff=""
         android:textOn=""
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LoginEmail" />
+        app:layout_constraintEnd_toEndOf="@+id/LoginPass"
+        app:layout_constraintTop_toTopOf="@+id/LoginPass" />
 
     <TextView
         android:id="@+id/dots2"
@@ -159,5 +160,26 @@
         app:layout_constraintBottom_toTopOf="@+id/CNABtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/ic_baseline_email_24"
+        app:layout_constraintStart_toStartOf="@+id/LoginEmail"
+        app:layout_constraintTop_toTopOf="@+id/LoginEmail" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:src="@android:drawable/ic_lock_idle_lock"
+        app:layout_constraintStart_toStartOf="@+id/LoginPass"
+        app:layout_constraintTop_toTopOf="@+id/LoginPass"
+        app:tint="@color/black" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
