--- a/app/src/main/res/layout/fragment_forgotpassword.xml
+++ b/app/src/main/res/layout/fragment_forgotpassword.xml
@@ -43,11 +43,10 @@
         android:layout_width="319dp"
         android:layout_height="52dp"
         android:layout_marginStart="86dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="86dp"
-        android:background="#AECDE6"
+        android:background="#D0E5F7"
         android:ems="10"
-        android:fontFamily="@font/itimregular"
         android:hint="Enter email address"
         android:inputType="text"
         android:textAlignment="center"
@@ -61,42 +60,46 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="110dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="110dp"
         android:text="FORGOT PASSWORD"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:textStyle="bold"
+        android:textColor="#3F51B5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/ecohelpertext" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="311dp"
-        android:layout_height="33dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="44dp"
+        android:gravity="center"
+        android:padding="8dp"
         android:fontFamily="@font/itimregular"
-        android:text="Enter your email and we will send you your password"
+        android:text="Enter your email and we will send a reset password confirmation to your email"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#CDB5B5"
+        android:textColor="#cf9393"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="85dp"
         android:layout_height="60dp"
         android:layout_marginStart="163dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="163dp"
         android:background="#03A9F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ecohelpertext"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:srcCompat="@android:drawable/stat_sys_warning" />
 
     <Button
@@ -104,7 +107,7 @@
         android:layout_width="129dp"
         android:layout_height="54dp"
         android:layout_marginStart="141dp"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="141dp"
         android:backgroundTint="#03A9F4"
         android:text="SUBMIT"
