Make email address as text only and cannot be edited

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -188,7 +188,7 @@
                         android:src="@drawable/email"
                         app:tint="@color/teal_700" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/emailTV"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
