--- a/app/src/main/res/layout/fragment_thrid_question_calculate_cf.xml
+++ b/app/src/main/res/layout/fragment_thrid_question_calculate_cf.xml
@@ -67,9 +67,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
-            android:text="Amount spent for food in RM"
+            android:text="Amount spent for food in RM per month"
             android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
